edited by Yossef Sayed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,10 @@
   "C_Cpp_Runner.compilerArgs": [],
   "C_Cpp_Runner.linkerArgs": [],
   "C_Cpp_Runner.includePaths": [],
-  "C_Cpp_Runner.includeSearch": ["*", "**/*"],
+  "C_Cpp_Runner.includeSearch": [
+    "*",
+    "**/*"
+  ],
   "C_Cpp_Runner.excludeSearch": [
     "**/build",
     "**/build/**",
@@ -135,7 +138,6 @@
     "tree.h": "c"
   },
   "C_Cpp.errorSquiggles": "enabled",
-
   "workbench.colorCustomizations": {
     "editor.background": "#000000"
   },
@@ -143,17 +145,14 @@
   "editor.tokenColorCustomizations": {
     "textMateRules": [
       {
-        // 🖤 الخلفية سوداء جدًا
         "scope": [],
         "settings": {
           "foreground": "#000000"
         }
       },
       {
-        // 🔴 كل الـ special operators
         "scope": [
           "keyword.operator",
-
           "keyword.operator.arithmetic",
           "keyword.operator.comparison",
           "keyword.operator.logical",
@@ -163,7 +162,6 @@
           "keyword.operator.other",
           "punctuation.definition.operator.arrow",
           "keyword.control.import.include",
-        
           "punctuation.definition.directive",
           "punctuation.accessor"
         ],
@@ -172,23 +170,21 @@
         }
       },
       {
-        // 🤍 الرموز البسيطة (, : ; # @ .)
         "scope": [
-          "punctuation.separator.comma", // ,
-          "punctuation.separator.colon", // :
-          "punctuation.terminator.statement", // ;
-          "punctuation.definition.preprocessor", // #
-          "meta.preprocessor.include", // #include ""
-          "entity.name.namespace", // ::
-          "punctuation.separator", // fallback
-          "meta.brace.square" // [ ]
+          "punctuation.separator.comma",
+          "punctuation.separator.colon",
+          "punctuation.terminator.statement",
+          "punctuation.definition.preprocessor",
+          "meta.preprocessor.include",
+          "entity.name.namespace",
+          "punctuation.separator",
+          "meta.brace.square"
         ],
         "settings": {
           "foreground": "#FFFFFF"
         }
       },
       {
-        // 🤍 أسماء المتغيرات
         "scope": [
           "variable",
           "variable.parameter",
@@ -201,20 +197,21 @@
         }
       },
       {
-        // 💜 escape sequences زي \n \t \r
-        "scope": ["constant.character.escape"],
+        "scope": [
+          "constant.character.escape"
+        ],
         "settings": {
           "foreground": "#B266FF"
         }
       },
       {
-        "scope": ["keyword.operator.assignment"],
+        "scope": [
+          "keyword.operator.assignment"
+        ],
         "settings": {
           "foreground": "#669cff"
         }
       },
-      // More rules can be added here
-      //الارقام 🤍
       {
         "scope": [
           "constant.numeric",
@@ -228,9 +225,11 @@
           "foreground": "#B266FF"
         }
       },
-      // التعليقات 💚
       {
-        "scope": ["comment", "punctuation.definition.comment"],
+        "scope": [
+          "comment",
+          "punctuation.definition.comment"
+        ],
         "settings": {
           "foreground": "#ff9100",
           "fontStyle": "italic"
